--- a/package.json
+++ b/package.json
@@ -1,17 +1,67 @@
 {
-    "name": "playvinyl",
-    "version": "0.0.1",
-    "description": "playvinyl.ru site project",
-    "main": "frontend/src/app.js",
-    "scripts": {
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/messteno/playvinyl-django-react"
-    },
-    "keywords": [
-        "playvinyl"
-    ],
-    "author": "Artem Meshcheryakov <messteno@gmail.com>",
-    "license": "GPL-3.0"
+  "name": "playvinyl",
+  "version": "0.0.1",
+  "description": "playvinyl.ru site project",
+  "main": "frontend/app/app.js",
+  "scripts": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/messteno/playvinyl-django-react"
+  },
+  "keywords": [
+    "playvinyl"
+  ],
+  "author": "Artem Meshcheryakov <messteno@gmail.com>",
+  "license": "GPL-3.0",
+  "dependencies": {
+    "react": "^15.1.0",
+    "react-bootstrap": "^0.30.0-rc.2",
+    "react-dom": "^15.2.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.6.0",
+    "react-router-redux": "^4.0.5",
+    "redux": "^3.5.2",
+    "redux-form": "^5.3.1",
+    "redux-immutable": "^3.0.6",
+    "redux-promised": "^1.3.0",
+    "redux-thunk": "^2.1.0"
+  },
+  "devDependencies": {
+    "autoprefixer-stylus": "^0.9.4",
+    "babel-eslint": "^6.1.2",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "babelify": "^7.3.0",
+    "debowerify": "^1.5.0",
+    "del": "^2.2.1",
+    "eslint": "^3.1.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.11.1",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-plugin-react": "^5.2.2",
+    "gulp": "^3.9.1",
+    "gulp-cached": "^1.1.0",
+    "gulp-changed": "^1.3.0",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-eslint": "^3.0.1",
+    "gulp-flatten": "^0.3.0",
+    "gulp-gzip": "^1.4.0",
+    "gulp-if": "^2.0.1",
+    "gulp-imagemin": "^3.0.2",
+    "gulp-minify-html": "^1.0.6",
+    "gulp-modernizr": "^1.0.0-alpha",
+    "gulp-notify": "^2.2.0",
+    "gulp-size": "^2.1.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-streamify": "^1.0.2",
+    "gulp-stylus": "^2.5.0",
+    "gulp-uglify": "^1.5.4",
+    "gulp-watch": "^4.3.8",
+    "nib": "^1.1.0",
+    "run-sequence": "^1.2.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
+  }
 }
